v1.0.1
- Add More Classification Ratings
- Add default behaviour for unsupported certifications
- Add support for bulk security setting
- Add option to view videos protected by classification

v1.0.0
- Initial Version