@@ -2,10 +2,16 @@
 <settings>
 	<category label="32002">
 		<setting id="pinValue" type="text" visible="false" option="hidden" label="Pin Value" default="" />
+		<setting id="pinValue2" type="text" visible="false" option="hidden" label="Pin Value 2" default="" />
+		<setting id="pinValue3" type="text" visible="false" option="hidden" label="Pin Value 3" default="" />
+		<setting id="pinValue4" type="text" visible="false" option="hidden" label="Pin Value 4" default="" />
+		<setting id="pinValue5" type="text" visible="false" option="hidden" label="Pin Value 5" default="" />
 		<setting id="pinValueSet" type="bool" visible="false" option="hidden" label="Pin Value Set" default="false" />
 		<setting id="pinWarning" enable="false" visible="eq(-1,false)" type="text" label="32008" default="" />
 		<setting id="pinLength" label="32006" type="slider" default="4" range="1,1,10" option="int" />
 		<setting id="invalidPinNotificationType" label="32009" type="enum" lvalues="32010|32011|32012" default="0" />
+		<setting id="numberOfLevels" label="32020" type="enum" values="1|2|3|4|5" default="1" />
+		<setting id="showSecurityInfo" type="bool" visible="!eq(-1,0)" label="32022" default="true" />
     	<setting label="32005" type="lsep"/>
 		<setting label="32007" type="action" option="close" action="RunScript($CWD/setpin.py)"/>
 		<setting label="32114" type="action" option="close" action="RunAddon(script.pinsentry)"/>
